# ex2_preSemster

./: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  GameElements.h  GameRules.cpp  GameRules.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  ReversiRules.cpp  ReversiRules.h  main.cpp
